--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title>Julian HOEGNER's profile</title>
-	<meta name="description" content="This is the profile page of Julian HOEGNER.">
+	<meta name="description" content="AAAThis is the profile page of Julian HOEGNER.">
 	<meta charset="utf-8">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
