--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title>Julian HOEGNER's profile</title>
-	<meta name="description" content="AAAThis is the profile page of Julian HOEGNER.">
+	<meta name="description" content="This is the profile page of Julian HOEGNER.">
 	<meta charset="utf-8">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
 <body>
 	<div>
 		<div class="box" id="Intro">
-			<h1>Hello, it's Julian!</h1>
+			<h1>Hello, it's not Julian!</h1>
 			<img src="images/me.jpg" alt="Julian HOEGNER" id="me">
 			<p>
 			20-year old business student spending an exchange semester in beautiful Paris! Part-time start-up gourmet and VC-bro.
