--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<div>
 		<div class="box" id="Intro">
-			<h1>Hello, it's not Julian!</h1>
+			<h1>Hello, it's Julian!</h1>
 			<img src="images/me.jpg" alt="Julian HOEGNER" id="me">
 			<p>
 			20-year old business student spending an exchange semester in beautiful Paris! Part-time start-up gourmet and VC-bro.
