--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 </head>
 
 <body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ND0D7T7NXW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ND0D7T7NXW');
+</script>
 	<div>
 		<div class="box" id="Intro">
 			<h1>Hello, it's Julian!</h1>
